hard-gists/1e58686b6d5193cbaf30/run.log
=== Docker Run Log for 1e58686b6d5193cbaf30 ===
Started at: Mi 29. Okt 12:47:53 CET 2025

[2025-10-29 12:47:53] START: Running container for 1e58686b6d5193cbaf30
[2025-10-29 12:47:54] SUCCESS: Container f109d3c825a794b31f81a2ee383b33dd9a36dad6a2841e8b3060a3b15d3cc3f7 started for 1e58686b6d5193cbaf30
=== Container logs for 1e58686b6d5193cbaf30 ===
  File "/snippet.py", line 83
    print "Error when setting up network"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1e58686b6d5193cbaf30 ===
[2025-10-29 12:47:56] INFO: Container f109d3c825a794b31f81a2ee383b33dd9a36dad6a2841e8b3060a3b15d3cc3f7 has stopped
